# other

./: main.py  pyproject.toml  start.bat  Новый текстовый документ.txt
settings/: config.json  embeds.json
settings/database/: database.db-shm  database.db-wal
src/: bot.py
src/commands/: admin_cmd.py
src/commands/modules/common/: say_modal.py
src/commands/modules/feedback/: feedback_buttons.py
src/commands/modules/feedback/offers/: offers_buttons.py  offers_modal.py
src/commands/modules/feedback/reviews/: reviews_modal.py
src/commands/modules/feedback/votes/: votes_buttons.py  votes_modal.py
src/commands/modules/ticket/: ticket_button.py  ticket_drop.py  ticket_modal.py  ticket_views.py
src/events/: on_ready.py
src/utils/: __init__.py  common.py  config.py  logging.py
src/utils/database/: __init__.py  database.py  models.py
